--- a/SOFTWARE ENGINEERING/eregistrarwebapi/src/test/localHTMLCSSJSClient/student/new.html
+++ b/SOFTWARE ENGINEERING/eregistrarwebapi/src/test/localHTMLCSSJSClient/student/new.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>eRegistrar::: a Student-Class Management System - Students</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="eRegistrar Student/Class Management">
+    <meta name="description" content="Books Management Web Application">
     <meta name="author" content="O. Kalu">
     <link rel="icon" href="favicon.ico">
-    <title>eRegistrar - List of Students</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
-<!--PAGE BODY-->
-    <!--NAVIGATION BAR-->
+
+     <header>
+     
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a style="padding-right: 2em;" class="navbar-brand" href="../index.html">eRegistrar : : : a
+            Student-Class Management system</a>
+        <!--<span style="color: #ffffff;"> &nbsp; | &nbsp;</span>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" style="border-left: white 1px solid; padding-left: 2em; padding-right: 2em;">
+                    <a class="nav-link" href="list.html">Students</a>
+                </li>
+                <li class="nav-item" style="border-left: white 1px solid; padding-left: 2em;">
+                    <a class="nav-link" href=#>Classroom</a>
+                </li>
+                <li class="nav-item" style="border-left: white 1px solid; padding-left: 2em;">
+                    <a class="nav-link" href=#>Transcript</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <span style="color: #ffffff;">Welcome,&nbsp;</span>
+                <a style="color: #ffffff; margin-right: 1em;" href="#">Guest</a>
+                <a href="#" class="btn btn-secondary">Sign In</a>
+            </form>
+        </div>
+    </nav>
+</header>
+
+<!-- BODY -->
+
+
+
+
+
 
 
     <div style="padding-top:1em;" class="container">
@@ -117,7 +154,7 @@
 
 
                             </select>
-                            <input type="submit" name="isInternational" th:value="${student.isInternational}"/>
+                            <input type="text" name="isInternational" th:value="${student.isInternational}"/>
 
                         </div>
                     </div>
@@ -131,13 +168,12 @@
                                                                th:value="${student.dateOfEnrollment}">
                         </div>
                     </div>
-
+aaaaaa
 
                 </div>
 
-
-                <div style="float:right;">
-                    <a href="/eregistrar/student/list" class="btn btn-outline-warning">Cancel</a>&nbsp;&nbsp;&nbsp;
+                 <div style="float:right;">
+                    <a href="list.html" class="btn btn-outline-warning">Cancel</a>&nbsp;&nbsp;&nbsp;
                     <button id="btnSubmit" type="submit" class="btn btn-outline-success">Save Student</button>
                 </div>
             </fieldset>
@@ -150,18 +186,37 @@
 
 
 
-<!--PAGE BODY END-->
-<div th:replace="fragments/footer :: footer"></div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--PAGE BODY END-->
+ <footer>
+        <div style="margin:0 1em 0 1em;">
+            <span class="text-muted">Luiz Gadelha: : : CS425-SWE</span>
+            <span style="float:right;" class="text-muted">&copy; June 2020</span>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="../js/eregistrarwebapp.js"></script>
 
 </body>
 </html>
